[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/HUD.gd" type="Script" id=1]
[ext_resource path="res://Fonts/GameFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://ui/under.png" type="Texture" id=3]
[ext_resource path="res://ui/progress.png" type="Texture" id=4]
[ext_resource path="res://textures/vignette.png" type="Texture" id=5]
[ext_resource path="res://ui/emojis/1.png" type="Texture" id=6]
[ext_resource path="res://ui/emojis/3.png" type="Texture" id=7]
[ext_resource path="res://ui/emojis/2.png" type="Texture" id=8]
[ext_resource path="res://ui/emojis/4.png" type="Texture" id=10]
[ext_resource path="res://ui/emojis/5.png" type="Texture" id=11]
[ext_resource path="res://Fonts/GameFont_Header.tres" type="DynamicFont" id=12]

[sub_resource type="VisualShaderNodeColorUniform" id=1]
uniform_name = "ColorUniform"

[sub_resource type="VisualShaderNodeTextureUniform" id=2]
uniform_name = "TextureUniform"

[sub_resource type="VisualShaderNodeVectorOp" id=6]
operator = 2

[sub_resource type="VisualShaderNodeScalarUniform" id=7]
uniform_name = "Alpha"

[sub_resource type="VisualShaderNodeScalarOp" id=8]
operator = 2

[sub_resource type="VisualShader" id=4]
code = "shader_type canvas_item;
uniform vec4 ColorUniform : hint_color;
uniform sampler2D TextureUniform;
uniform float Alpha;



void vertex() {
// Output:0

}

void fragment() {
// ColorUniform:2
	vec3 n_out2p0 = ColorUniform.rgb;
	float n_out2p1 = ColorUniform.a;

// TextureUniform:3
	vec3 n_out3p0;
	float n_out3p1;
	{
		vec4 n_tex_read = texture(TextureUniform, UV.xy);
		n_out3p0 = n_tex_read.rgb;
		n_out3p1 = n_tex_read.a;
	}

// VectorOp:4
	vec3 n_out4p0 = n_out2p0 * n_out3p0;

// ScalarUniform:5
	float n_out5p0 = Alpha;

// ScalarOp:6
	float n_out6p0 = n_out3p1 * n_out5p0;

// Output:0
	COLOR.rgb = n_out4p0;
	COLOR.a = n_out6p0;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( -349, 103 )
mode = 1
flags/light_only = false
nodes/fragment/0/position = Vector2( 500, 460 )
nodes/fragment/2/node = SubResource( 1 )
nodes/fragment/2/position = Vector2( -80, 220 )
nodes/fragment/3/node = SubResource( 2 )
nodes/fragment/3/position = Vector2( -100, 380 )
nodes/fragment/4/node = SubResource( 6 )
nodes/fragment/4/position = Vector2( 260, 280 )
nodes/fragment/5/node = SubResource( 7 )
nodes/fragment/5/position = Vector2( -60, 580 )
nodes/fragment/6/node = SubResource( 8 )
nodes/fragment/6/position = Vector2( 260, 460 )
nodes/fragment/connections = PoolIntArray( 3, 0, 4, 1, 2, 0, 4, 0, 4, 0, 0, 0, 5, 0, 6, 1, 3, 1, 6, 0, 6, 0, 0, 1 )

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/ColorUniform = Color( 0.384314, 1, 0, 1 )
shader_param/Alpha = 0.0
shader_param/TextureUniform = ExtResource( 5 )

[node name="HUD" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
gasTextures = [ ExtResource( 6 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 11 ) ]

[node name="damageEffect" type="ColorRect" parent="."]
material = SubResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="upperbar" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Health" type="HBoxContainer" parent="upperbar"]
margin_right = 984.0
margin_bottom = 20.0

[node name="HealthLabel" type="Label" parent="upperbar/Health"]
margin_top = 3.0
margin_right = 73.0
margin_bottom = 17.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 2 )
text = "Health: 100"

[node name="Wave" type="HBoxContainer" parent="upperbar"]
margin_right = 984.0
margin_bottom = 20.0
rect_min_size = Vector2( 400, 0 )
alignment = 1

[node name="WaveLabel" type="Label" parent="upperbar/Wave"]
margin_left = 461.0
margin_top = 3.0
margin_right = 523.0
margin_bottom = 17.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 2 )
text = "Wave: 999"

[node name="Score" type="HBoxContainer" parent="upperbar"]
margin_right = 984.0
margin_bottom = 20.0
rect_min_size = Vector2( 400, 0 )
alignment = 2

[node name="ScoreLabel" type="Label" parent="upperbar/Score"]
margin_left = 932.0
margin_top = 3.0
margin_right = 984.0
margin_bottom = 17.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 2 )
text = "Score: 0"

[node name="gameOver" type="MarginContainer" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -67.5
margin_right = 125.0
margin_bottom = 67.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lost" type="VBoxContainer" parent="gameOver"]
visible = false
margin_right = 253.0
margin_bottom = 169.0

[node name="Label" type="Label" parent="gameOver/lost"]
margin_right = 250.0
margin_bottom = 31.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 12 )
text = "YOU FAILED!"
align = 1

[node name="Control" type="Control" parent="gameOver/lost"]
margin_top = 35.0
margin_right = 250.0
margin_bottom = 55.0
rect_min_size = Vector2( 0, 20 )

[node name="retryButton" type="Button" parent="gameOver/lost"]
margin_top = 59.0
margin_right = 250.0
margin_bottom = 79.0
custom_fonts/font = ExtResource( 2 )
text = "RETRY"

[node name="menuButton" type="Button" parent="gameOver/lost"]
margin_top = 83.0
margin_right = 250.0
margin_bottom = 103.0
custom_fonts/font = ExtResource( 2 )
text = "MENU"

[node name="quitButton" type="Button" parent="gameOver/lost"]
margin_top = 107.0
margin_right = 250.0
margin_bottom = 127.0
custom_fonts/font = ExtResource( 2 )
text = "QUIT"

[node name="victory" type="VBoxContainer" parent="gameOver"]
margin_right = 253.0
margin_bottom = 169.0

[node name="VictoryLabel" type="Label" parent="gameOver/victory"]
margin_right = 253.0
margin_bottom = 31.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 12 )
text = "Completed LevelX"
align = 1

[node name="Control" type="Control" parent="gameOver/victory"]
margin_top = 35.0
margin_right = 253.0
margin_bottom = 55.0
rect_min_size = Vector2( 0, 20 )

[node name="Score" type="Label" parent="gameOver/victory"]
margin_top = 59.0
margin_right = 253.0
margin_bottom = 73.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 2 )
text = "Time: X secs"
align = 1

[node name="Control2" type="Control" parent="gameOver/victory"]
margin_top = 77.0
margin_right = 253.0
margin_bottom = 97.0
rect_min_size = Vector2( 0, 20 )

[node name="nextButton" type="Button" parent="gameOver/victory"]
margin_top = 101.0
margin_right = 253.0
margin_bottom = 121.0
custom_fonts/font = ExtResource( 2 )
text = "Next"

[node name="retryButton" type="Button" parent="gameOver/victory"]
margin_top = 125.0
margin_right = 253.0
margin_bottom = 145.0
custom_fonts/font = ExtResource( 2 )
text = "Retry"

[node name="menuButton" type="Button" parent="gameOver/victory"]
margin_top = 149.0
margin_right = 253.0
margin_bottom = 169.0
custom_fonts/font = ExtResource( 2 )
text = "MENU"

[node name="pauseMenu" type="MarginContainer" parent="."]
pause_mode = 2
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -67.5
margin_right = 125.0
margin_bottom = 67.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="pauseMenu"]
margin_right = 250.0
margin_bottom = 135.0

[node name="Label" type="Label" parent="pauseMenu/VBoxContainer"]
margin_right = 250.0
margin_bottom = 31.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 12 )
text = "[PAUSED]"
align = 1

[node name="Control" type="Control" parent="pauseMenu/VBoxContainer"]
margin_top = 35.0
margin_right = 250.0
margin_bottom = 55.0
rect_min_size = Vector2( 0, 20 )

[node name="menuButton" type="Button" parent="pauseMenu/VBoxContainer"]
margin_top = 59.0
margin_right = 250.0
margin_bottom = 79.0
custom_fonts/font = ExtResource( 2 )
text = "Menu"

[node name="quitButton" type="Button" parent="pauseMenu/VBoxContainer"]
margin_top = 83.0
margin_right = 250.0
margin_bottom = 103.0
custom_fonts/font = ExtResource( 2 )
text = "QUIT"

[node name="GasBar" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -295.0
margin_right = 60.0
margin_bottom = -20.0
rect_min_size = Vector2( 2.99, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GasBar"]
margin_right = 40.0
margin_bottom = 275.0

[node name="EmojiTexture" type="TextureRect" parent="GasBar/VBoxContainer"]
margin_right = 40.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="GasBar/VBoxContainer"]
margin_top = 45.0
margin_right = 40.0
margin_bottom = 275.0
grow_vertical = 0
size_flags_vertical = 5
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
fill_mode = 3
